--- a/foundation-health/pipeline.yml
+++ b/foundation-health/pipeline.yml
@@ -2,8 +2,8 @@ resources:
 - name: peters-pipelines
   type: git
   source:
-    uri: https://github.com/Oskoss/peters-pipelines.git
-
+    uri: git@github.com:Oskoss/peters-pipelines.git
+    private_key: {{github_private_key}}
 jobs:
 - name: healthwatch-avilablity
   plan:
