--- a/foundation-health/pipeline.yml
+++ b/foundation-health/pipeline.yml
@@ -4,9 +4,15 @@ resources:
   source:
     uri: git@github.com:Oskoss/peters-pipelines.git
     private_key: {{github_private_key}}
+- name: 5m
+  type: time
+  source: {interval: 5m}
+
 jobs:
 - name: healthwatch-avilablity
   plan:
+  - get: 5m
+    trigger: true
   - get: peters-pipelines
   - task: ping-pong
     file: peters-pipelines/foundation-health/tasks/healthwatch-availability/task.yml
