--- a/foundation-health/tasks/healthwatch-availability/task.yml
+++ b/foundation-health/tasks/healthwatch-availability/task.yml
@@ -5,7 +5,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: pcfnorm/rootfs
+    repository: starkandwayne/concourse
 
 params:
   HEALTHWATCH_URL:
