--- a/foundation-health/pipeline.yml
+++ b/foundation-health/pipeline.yml
@@ -47,4 +47,4 @@ jobs:
     file: peters-pipelines/foundation-health/tasks/apps-man/task.yml
     params:
       SYS_ENDPOINT: {{sys_endpoint}}
-      ADMIN_PASSWORD: {{admin_password}}
+      HEALTHWATCH_MYSQL_PASSWORD: {{healthwatch_mysql_password}}
