--- a/foundation-health/tasks/cli/task.yml
+++ b/foundation-health/tasks/cli/task.yml
@@ -5,11 +5,11 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: starkandwayne/concourse
+    repository: mysql
 
 params:
   SYS_ENDPOINT:
-  ADMIN_PASSWORD:
+  HEALTHWATCH_MYSQL_PASSWORD:
 
 inputs:
   - name: peters-pipelines
