--- a/foundation-health/tasks/ops-man/task.yml
+++ b/foundation-health/tasks/ops-man/task.yml
@@ -10,7 +10,8 @@ image_resource:
 params:
   SYS_ENDPOINT:
   HEALTHWATCH_MYSQL_PASSWORD:
-
+  HEALTHWATCH_MYSQL_IP:
+  
 inputs:
   - name: peters-pipelines
 
