--- a/foundation-health/tasks/cli/task.yml
+++ b/foundation-health/tasks/cli/task.yml
@@ -10,6 +10,7 @@ image_resource:
 params:
   SYS_ENDPOINT:
   HEALTHWATCH_MYSQL_PASSWORD:
+  HEALTHWATCH_MYSQL_IP:
 
 inputs:
   - name: peters-pipelines
