--- a/foundation-health/tasks/healthwatch-availability/task.yml
+++ b/foundation-health/tasks/healthwatch-availability/task.yml
@@ -8,7 +8,7 @@ image_resource:
     repository: starkandwayne/concourse
 
 params:
-  SYS_ENDPOINT:
+  HW_DATA_ACCESS_URL:
 
 inputs:
   - name: peters-pipelines
