--- a/foundation-health/tasks/cli/task.yml
+++ b/foundation-health/tasks/cli/task.yml
@@ -5,7 +5,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: mysql
+    repository: starkandwayne/concourse
 
 params:
   HW_DATA_ACCESS_URL:
