--- a/foundation-health/pipeline.yml
+++ b/foundation-health/pipeline.yml
@@ -4,11 +4,27 @@ resources:
   source:
     uri: git@github.com:Oskoss/peters-pipelines.git
     private_key: {{github_private_key}}
+- name: hw-data-access
+  type: git
+  source:
+    uri: git@github.com:Oskoss/hw-data-access.git
+    private_key: {{github_private_key}}
 - name: 5m
   type: time
   source: {interval: 5m}
 
 jobs:
+- name: push-hw-data-access
+  plan:
+  - get: peters-pipelines
+  - get: hw-data-access
+  - task: push-app
+    file: peters-pipelines/foundation-health/tasks/healthwatch-availability/task.yml
+    params:
+      CF_API_URL: {{cf_api_url}}
+      CF_PASSWORD: {{cf_password}}
+      HEALTHWATCH_MYSQL_IP: {{healthwatch_mysql_ip}}
+      HEALTHWATCH_MYSQL_ADMIN_PASSWORD: {{healthwatch_mysql_admin_password}}
 - name: healthwatch-avilablity
   plan:
   - get: 5m
