--- a/foundation-health/pipeline.yml
+++ b/foundation-health/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
   - task: ping
     file: peters-pipelines/foundation-health/tasks/healthwatch-availability/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
 - name: uaa-login
   plan:
   - get: 5m
@@ -42,7 +42,7 @@ jobs:
   - task: login
     file: peters-pipelines/foundation-health/tasks/uaa-login/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
 - name: cli
   plan:
   - get: 5m
@@ -51,7 +51,7 @@ jobs:
   - task: cli
     file: peters-pipelines/foundation-health/tasks/cli/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
 - name: apps-man
   plan:
   - get: 5m
@@ -60,7 +60,7 @@ jobs:
   - task: cli
     file: peters-pipelines/foundation-health/tasks/apps-man/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
 - name: ops-man
   plan:
   - get: 5m
@@ -69,7 +69,7 @@ jobs:
   - task: cli
     file: peters-pipelines/foundation-health/tasks/ops-man/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
 - name: log-loss
   plan:
   - get: 5m
@@ -78,4 +78,4 @@ jobs:
   - task: cli
     file: peters-pipelines/foundation-health/tasks/log-loss/task.yml
     params:
-      HW_DATA_ACCESS_URL: {{hw_data_access_url}}
+      CF_API_URL: {{cf_api_url}}
