--- a/foundation-health/tasks/push-hw-data-access/task.yml
+++ b/foundation-health/tasks/push-hw-data-access/task.yml
@@ -10,7 +10,7 @@ image_resource:
 params:
   CF_API_URL:
   OPSMAN_URL:
-  OPSMAN_USER:
+  OPSMAN_USERNAME:
   OPSMAN_PASSWORD:
 inputs:
   - name: peters-pipelines
