--- a/kubernetes/tasks/create-namespace/task.yml
+++ b/kubernetes/tasks/create-namespace/task.yml
@@ -6,9 +6,9 @@ image_resource:
   type: docker-image
   source:
     repository: oskoss/pks
-    
+
 params:
-  K8_NAMESPACE:
+  K8S_NAMESPACE:
 
 inputs:
   - name: peters-pipelines
