--- a/kubernetes/prometheus-pipeline.yml
+++ b/kubernetes/prometheus-pipeline.yml
@@ -15,8 +15,8 @@ jobs:
   plan:
   - get: peters-pipelines
   - get: pks-prometheus
-  - task: authenticate-cluster
-    file: peters-pipelines/kubernetes/tasks/authenticate-cluster/task.yml
+  - task: authenticate-kubernetes
+    file: peters-pipelines/kubernetes/tasks/authenticate-kubernetes/task.yml
     params:
       PKS_API_URL: {{pks_api_url}}
       PKS_API_USERNAME: {{pks_api_username}}
