--- a/kubernetes/tasks/create-prometheus-loadbalancer/task.yml
+++ b/kubernetes/tasks/create-prometheus-loadbalancer/task.yml
@@ -13,7 +13,7 @@ params:
 inputs:
   - name: peters-pipelines
   - name: pks-prometheus
-  - name: pks-config
+  - name: kube-config
 
 run:
   path: peters-pipelines/kubernetes/tasks/create-prometheus-loadbalancer/task.sh
