--- a/pks/tasks/get-cluster/tash.yml
+++ b/pks/tasks/get-cluster/tash.yml
@@ -8,12 +8,11 @@ image_resource:
     repository: oskoss/pks
 
 params:
-  K8S_NAMESPACE:
+  PKS_CLUSTERNAME:
 
 inputs:
   - name: peters-pipelines
-  - name: pks-prometheus
-  - name: kube-config
+  - name: pks-config
 
 run:
-  path: peters-pipelines/kubernetes/tasks/create-prometheus-deployment/task.sh
+  path: peters-pipelines/pks/tasks/get-cluster/task.sh
