--- a/pcf/homelab-install-pipeline.yml
+++ b/pcf/homelab-install-pipeline.yml
@@ -52,7 +52,15 @@ jobs:
       OPSMAN_DISK_TYPE: {{opsman_disk_type}}
       OM_VM_POWER_STATE: {{om_vm_power_state}}
 
-- name: configure-director
+  - task: config-auth
+    file: peters-pipelines/pcf/tasks/config-opsman-auth/task.yml
+    params:
+      OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
+      OPS_MGR_USR: {{opsman_admin_username}}
+      OPS_MGR_PWD: {{opsman_admin_password}}
+      OM_DECRYPTION_PWD: {{om_decryption_pwd}}
+
+- name: configure-ops-director
   plan:
   - aggregate:
     - get: peters-pipelines
@@ -61,10 +69,40 @@ jobs:
       passed: [deploy-opsman]
       trigger: true
 
-  - task: config-opsman-auth
-    file: peters-pipelines/pcf/tasks/config-opsman/task.yml
+  - task: configure-tile
+    file: peters-pipelines/pcf/tasks/vsphere-config-opsman-tile/task.yml
     params:
       OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
       OPS_MGR_USR: {{opsman_admin_username}}
       OPS_MGR_PWD: {{opsman_admin_password}}
-      OM_DECRYPTION_PWD: {{om_decryption_pwd}}
+      VCENTER_HOST: {{vcenter_host}}
+      VCENTER_USR: {{vcenter_usr}}
+      VCENTER_PWD: {{vcenter_pwd}}
+      VCENTER_DATA_CENTER: {{vcenter_datacenter}}
+      VCENTER_DISK_TYPE: {{vm_disk_type}}
+      EPHEMERAL_STORAGE_NAMES: {{ephemeral_storage_names}}
+      PERSISTENT_STORAGE_NAMES: {{persistent_storage_names}}
+      BOSH_VM_FOLDER:  {{bosh_vm_folder}}
+      BOSH_TEMPLATE_FOLDER: {{bosh_template_folder}}
+      BOSH_DISK_PATH: {{bosh_disk_path}}
+      ICMP_CHECKS_ENABLED: {{icmp_checks_enabled}}
+      NETWORK_NAME: {{network_name}}
+      VCENTER_NETWORK: {{vsphere_network}}
+      NW_CIDR: {{nw_cidr}}
+      EXCLUDED_RANGE: {{excluded_range}}
+      NW_DNS: {{nw_dns}}
+      NW_GATEWAY: {{nw_gateway}}
+      NW_AZS: {{nw_azs}}
+      AZ_1: {{az_1_name}}
+      AZ_1_CLUSTER_NAME: {{az_1_cluster_name}}
+      AZ_1_RP_NAME: {{az_1_rp_name}}
+      NTP_SERVERS: {{ntp_servers}}
+      OPS_DIR_HOSTNAME: {{ops_dir_hostname}}
+      ENABLE_VM_RESURRECTOR: {{enable_vm_resurrector}}
+      MAX_THREADS: {{max_threads}}
+      TRUSTED_CERTIFICATES: {{trusted_certificates}}
+      NSX_NETWORKING_ENABLED: {{nsx_networking_enabled}}
+      NSX_ADDRESS: {{nsx_address}}
+      NSX_USERNAME: {{nsx_username}}
+      NSX_PASSWORD: {{nsx_password}}
+      NSX_CA_CERTIFICATE: {{nsx_ca_certificate}}
