--- a/pcf/homelab-install-pipeline.yml
+++ b/pcf/homelab-install-pipeline.yml
@@ -486,3 +486,21 @@ jobs:
       OPS_MGR_PWD: {{opsman_admin_password}}
       PRODUCT_NAME: "p-rabbitmq"
       PRODUCT_CONFIG_YAML: "peters-pipelines/pcf/sample-tile-configs/rabbitmq.yml"
+
+- name: apply-changes-all-tiles
+  plan:
+  - aggregate:
+    - get: peters-pipelines
+    - get: pcf-ops-manager
+      params: {globs: []}
+      passed: [Configure-RMQ-Tile,Configure-SRT-PAS-Tile,Configure-MySQL-Tile,stage-SCS]
+      trigger: true
+
+  - task: apply-changes
+    file: peters-pipelines/pcf/tasks/apply-changes/task.yml
+    params:
+      OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
+      OPSMAN_CLIENT_ID: ""
+      OPSMAN_CLIENT_SECRET: ""
+      OPSMAN_USERNAME: {{opsman_admin_username}}
+      OPSMAN_PASSWORD: {{opsman_admin_password}}
